infra/k8s/api-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-depl

spec: 
  replicas: 1 
  selector: 
    matchLabels:
        component: api
  template: 
    metadata:
      labels: 
        component: api
    spec:
      containers: 
      - name: api 
        image: getarive/api 
        imagePullPolicy: IfNotPresent 
        ports: 
        - containerPort: 3000 
---
        

apiVersion: v1
kind: Service
metadata: 
    name: api-svc
    
spec: 
  type: ClusterIP
  ports: 
    - port: 3000 
      targetPort: 3000 
  selector: 
    component: api
