infra/k8s/ingress-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: campaign-api-ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: api-svc
              servicePort: 3000
